; ModuleID = '/home/carl/AnghaBench/bitwise/ion/extr_resolve.c_finalize_reachable_syms.c'
source_filename = "/home/carl/AnghaBench/bitwise/ion/extr_resolve.c_finalize_reachable_syms.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i8*, %struct.TYPE_5__* }
%struct.TYPE_5__ = type { i8* }

@flag_verbose = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [30 x i8] c"Finalizing reachable symbols\0A\00", align 1
@reachable_syms = common dso_local global %struct.TYPE_6__** null, align 8
@.str.1 = private unnamed_addr constant [23 x i8] c"New reachable symbols:\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c" %s/%s\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @finalize_reachable_syms() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = load i64, i64* @flag_verbose, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  br label %9

9:                                                ; preds = %7, %0
  store i64 0, i64* %1, align 8
  %10 = load %struct.TYPE_6__**, %struct.TYPE_6__*** @reachable_syms, align 8
  %11 = call i64 @buf_len(%struct.TYPE_6__** %10)
  store i64 %11, i64* %2, align 8
  store i64 0, i64* %3, align 8
  br label %12

12:                                               ; preds = %62, %9
  %13 = load i64, i64* %3, align 8
  %14 = load i64, i64* %2, align 8
  %15 = icmp ult i64 %13, %14
  br i1 %15, label %16, label %65

16:                                               ; preds = %12
  %17 = load %struct.TYPE_6__**, %struct.TYPE_6__*** @reachable_syms, align 8
  %18 = load i64, i64* %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_6__*, %struct.TYPE_6__** %17, i64 %18
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** %19, align 8
  %21 = call i32 @finalize_sym(%struct.TYPE_6__* %20)
  %22 = load i64, i64* %3, align 8
  %23 = load i64, i64* %2, align 8
  %24 = sub i64 %23, 1
  %25 = icmp eq i64 %22, %24
  br i1 %25, label %26, label %61

26:                                               ; preds = %16
  %27 = load i64, i64* @flag_verbose, align 8
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %57

29:                                               ; preds = %26
  %30 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %31 = load i64, i64* %1, align 8
  store i64 %31, i64* %4, align 8
  br label %32

32:                                               ; preds = %52, %29
  %33 = load i64, i64* %4, align 8
  %34 = load i64, i64* %2, align 8
  %35 = icmp ult i64 %33, %34
  br i1 %35, label %36, label %55

36:                                               ; preds = %32
  %37 = load %struct.TYPE_6__**, %struct.TYPE_6__*** @reachable_syms, align 8
  %38 = load i64, i64* %4, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__*, %struct.TYPE_6__** %37, i64 %38
  %40 = load %struct.TYPE_6__*, %struct.TYPE_6__** %39, align 8
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 1
  %42 = load %struct.TYPE_5__*, %struct.TYPE_5__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %42, i32 0, i32 0
  %44 = load i8*, i8** %43, align 8
  %45 = load %struct.TYPE_6__**, %struct.TYPE_6__*** @reachable_syms, align 8
  %46 = load i64, i64* %4, align 8
  %47 = getelementptr inbounds %struct.TYPE_6__*, %struct.TYPE_6__** %45, i64 %46
  %48 = load %struct.TYPE_6__*, %struct.TYPE_6__** %47, align 8
  %49 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %48, i32 0, i32 0
  %50 = load i8*, i8** %49, align 8
  %51 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i8* %44, i8* %50)
  br label %52

52:                                               ; preds = %36
  %53 = load i64, i64* %4, align 8
  %54 = add i64 %53, 1
  store i64 %54, i64* %4, align 8
  br label %32

55:                                               ; preds = %32
  %56 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  br label %57

57:                                               ; preds = %55, %26
  %58 = load i64, i64* %2, align 8
  store i64 %58, i64* %1, align 8
  %59 = load %struct.TYPE_6__**, %struct.TYPE_6__*** @reachable_syms, align 8
  %60 = call i64 @buf_len(%struct.TYPE_6__** %59)
  store i64 %60, i64* %2, align 8
  br label %61

61:                                               ; preds = %57, %16
  br label %62

62:                                               ; preds = %61
  %63 = load i64, i64* %3, align 8
  %64 = add i64 %63, 1
  store i64 %64, i64* %3, align 8
  br label %12

65:                                               ; preds = %12
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i64 @buf_len(%struct.TYPE_6__**) #1

declare dso_local i32 @finalize_sym(%struct.TYPE_6__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
